# Coltenus.github.io

./: .gitignore  README.md  about.html  index.html  login.html  profile.html  pyproject.toml  register.html  runserver.sh  timekeep.html
.github/workflows/: django.yml
api/: models.py  urls.py  views.py
api/migrations/: 0001_initial.py
js/: common.js  main.js  profile.js  timekeep.js
js/controller/: Controller.js  ControllerAbout.js  ControllerIndex.js  ControllerLogin.js  ControllerProfile.js  ControllerRegister.js  ControllerTimekeep.js
js/model/: TableModel.js  TimerModel.js  UserModel.js
js/view/: TableView.js  UserView.js
lab3/: forms.py  models.py  urls.py  views.py
lab3/migrations/: 0001_initial.py  0002_remove_user_id_user_user_hash.py  0003_alter_user_email.py  0004_remove_user_name.py  0005_remove_user_created_at_remove_user_updated_at.py  0006_user_spent_time.py
labs/: settings.py  urls.py  wsgi.py
pages/: .gitignore  index.html  package-lock.json  package.json  vue.config.js
pages/public/: styles.css
pages/src/: about.js  auth.js  common.js  index.js  main.js  not_found.js  profile.js  timekeep.js
pages/src/components/: AccessLinks.vue  Base.vue  NavLinks.vue  NavLinksReg.vue  NotFound.vue
pages/src/controller/: ControllerIndex.js  ControllerLogin.js  ControllerProfile.js  ControllerRegister.js  ControllerTimekeep.js
pages/src/model/: TableModel.js
pages/src/view/: TableView.js
res/: styles.css
templates/lab3/: about.html  base.html  index.html  login.html  profile.html  register.html  timekeep.html
(+29 files in other folders)
